<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CoffeeRoastActivity!</string>
    <string name="app_name">CoffeeRoast</string>
    <string name="runTime">Run Time</string>
    <string name="tempDisplay">Temp:</string>
    <string name="roc">RoC</string>
    <string name="rocTarget">Target RoC</string>
    <string name="maxTemp">Max Temp:</string>
    <string name="off">Off</string>
    <string name="hold">Hold</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="alarmTemp">"Alarm: "</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="acceptTemps">Accept Temp</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    
    
</resources>