<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dispRunTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runTime" />

            <EditText
                android:id="@+id/dispRoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roc" />

            <EditText
                android:id="@+id/dispTargRoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocTarget" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dispTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:bufferType="normal"
                android:text="@string/tempDisplay" />

            <EditText
                android:id="@+id/dispMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxTemp" />

            <EditText
                android:id="@+id/editAlarmTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmTemp" />

            <Button
                android:id="@+id/buttonAcceptVariance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceptTemps" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ZoomControls
                android:id="@+id/alarmSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/ButtonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/ButtonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/runMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/AlarmTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:isScrollContainer="false"
                    android:text="223" />

                <RadioButton
                    android:id="@+id/runOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/runAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto" android:checked="true"/>

                <RadioButton
                    android:id="@+id/runManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual" />
            </RadioGroup>

            <EditText
                android:id="@+id/simulateSpeed"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:ems="10"
                android:inputType="number"
                android:text="1" >              
            </EditText>

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/tempBar"
            android:layout_width="985dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/chartIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="260dp"
            android:minWidth="260dp"
            android:text="&apos;chart places&apos;" />

    </LinearLayout>
 	
</LinearLayout>